@startuml

class Pais{
    - nombre:String
    -ejercitos: Integer
    -paisesLimitrofes: ArrayList

    + colocarEjercitos(cantidadDeEjercitos:Integer, unaFicha:FIcha)
    + eliminarEjercito(): void
    + cambiarFicha(Ficha:unaFicha)
    + ocuparPais(unPais:Pais, cantidadDeEjercitos; Integer)
    + atacarA(paisEnemigo:Pais):void
}

class Batalla{
    + combateEntre(atacante:Pais,defensor:Pais): void
    - evaluarDados(atacante:Pais,defensor:Pais):void
    + batallasIndividuales(atacante:Pais,defensor:Pais, dadosAtacante:ArrayList, dadosDefensor:ArrayList):void
}
class Tablero{
    + obtenerCantidadPaisesJugador():int
    + fichasContinente(unJugador:Jugador):int

}
Juego *-- Tablero
Tablero *-- Continente
Tablero *--Pais
Continente-- Pais

Pais --> Ficha
Pais -- TarjetaPais
Pais ..> Dados

Juego --> Batalla
Batalla ..> Pais

@enduml